--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "xortils"
-version = "0.0.2"
+version = "0.0.3"
 authors = [
   { name="Elijah Andrews", email="elijahan@umich.edu" },
 ]
@@ -20,3 +20,4 @@ license-files = ["LICEN[CS]E*"]
 
 [project.urls]
 Source = "https://github.com/Xorgon/xortils"
+Documentation = "https://xortils.readthedocs.io/en/latest/"
